--- a/org/wiki.org
+++ b/org/wiki.org
@@ -1,15 +1,14 @@
 #+SETUPFILE: ../theme-rose.setup
-#+DATE: <2021-01-14 Thu 11:38>
+#+DATE: <2021-01-14 Thu 13:26>
 #+TITLE: Wiki
 
 * WIKI
 
-** 设计模式准则 [2020-06-24 Wed 10:57]
-		我以前给一些公司讲一些设计模式的培训课，我一再提到，那23个经典的设计模式和 OO 半毛钱关系没有，只不过人家用 OO 来实现罢了。
+** 设计模式准则
 
 		设计模式就三个准则：
 		- 中意于组合而不是继承，
 		- 依赖于接口而不是实现，
 		- 高内聚，低耦合。
 
-		你看，这完全就是 Unix 的设计准则。
+		完全就是 Unix 的设计准则。
